# Game-Of-Life-Picture

./: .gitignore  Cargo.toml
src/: main.rs
