[package]
name = "gol_img"
version = "0.1.0"
edition = "2021"
description = "Program that simulates the game of life on an image, which will therefore be regenerated at each step"
keywords = ["Game Of Life", "gol"]
authors = ["Lurgrid <lurgrid@sagbot.com>"]
repository = "https://github.com/Lurgrid/Game-Of-Life-Picture"
license = "GPL-3.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1"
tokio = { version = "1", features = ["full"] }
